--- a/ViaCep.xcodeproj/xcshareddata/xcschemes/ViaCep.xcscheme
+++ b/ViaCep.xcodeproj/xcshareddata/xcschemes/ViaCep.xcscheme
@@ -29,7 +29,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:ViaCepTests/ViaCep.xctestplan"
+            reference = "container:ViaCep.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
