--- a/ViaCep.xcodeproj/xcshareddata/xcschemes/ViaCepUITests.xcscheme
+++ b/ViaCep.xcodeproj/xcshareddata/xcschemes/ViaCepUITests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1430"
+   LastUpgradeVersion = "1520"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -13,7 +13,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:ViaCepTests/ViaCep.xctestplan">
+            reference = "container:ViaCepTests/ViaCep.xctestplan"
+            default = "YES">
          </TestPlanReference>
       </TestPlans>
       <Testables>
