--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_16.0.app
     - name: Build and test
-      run: xcodebuild clean build test -workspace App/ViaCep.workspace -scheme "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
+      run: xcodebuild clean build test -workspace App/ViaCep.xcodeproj -scheme "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
