--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_16.0.app
 
     - name: Build and test
-      run: xcodebuild clean build test -workspace Projects/App's/ViaCepApp/ViaCep.xcodeproj -scheme "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
+      run: xcodebuild clean build test -workspace Projects/App/ViaCepApp/ViaCep.xcodeproj -scheme "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
