--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -18,4 +18,4 @@ jobs:
       run: sudo xcode-select -switch /Applications/Xcode_16.0.app
 
     - name: Build and test
-      run: xcodebuild clean build test -workspace Projects/Apps/ViaCepApp/ViaCep.xcodeproj -scheme "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
+      run: xcodebuild clean build test -workspace ViaCepApp/ViaCep.xcodeproj -scheme "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
