--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,21 +1,27 @@
-name: ViaCep
+name: CI-macOS
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
 
     runs-on: macos-latest
 
+    timeout-minutes: 10
+    
     steps:
     - uses: actions/checkout@v4
 
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_16.0.app
 
-    - name: Build and test
-      run: xcodebuild clean build test -workspace /Projects/Apps/ViaCepApp/ViaCep.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO    
+    - name: Xcode version
+      run: /usr/bin/xcodebuild -version
+
+    - name: Build and Test MacOS CI
+      run: xcodebuild clean build test -workspace /Projects/Apps/ViaCepApp/ViaCep.xcodeproj/ -scheme "ViaCep" -sdk macosSequoia15.1 -destination "platform=macOS,arch=x86_64" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+   
