--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,5 +23,5 @@ jobs:
       run: /usr/bin/xcodebuild -version
 
     - name: Build and Test MacOS CI
-      run: xcodebuild clean build test -workspace /Projects/Apps/ViaCepApp/ViaCep.xcodeproj/ -scheme "ViaCep" -sdk macosx15.1 -destination "platform=macOS,arch=x86_64" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build test -workspace /Projects/Apps/ViaCepApp/ViaCep.xcodeproj/ -scheme "ViaCep" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
    
