--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 10
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_16.0.app
@@ -23,5 +23,5 @@ jobs:
       run: /usr/bin/xcodebuild -version
 
     - name: Build and Test MacOS CI
-      run: xcodebuild clean build test -workspace -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj/ -scheme "ViaCep" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build test -workspace -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj/project.pbxproj -scheme "ViaCep" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
    
