--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,6 +22,11 @@ jobs:
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
 
+    - name: Install dependencies
+      run: |
+        brew install cocoapods
+        pod install --project-directory=Projects/Apps/ViaCepApp/
+
     - name: Build and Test MacOS CI
-      run: xcodebuild clean build test -project ViaCepApp/ViaCep.xcodeproj/ -scheme "ViaCep" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj -scheme ViaCep
    
