--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -28,5 +28,5 @@ jobs:
         pod install --project-directory=Projects/Apps/ViaCepApp/
 
     - name: Build and Test MacOS CI
-      run: xcodebuild -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj -scheme ViaCep
+      run: xcodebuild clean build test -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj/ -scheme "ViaCep" -testPlan "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
    
