--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,14 +14,21 @@ jobs:
     timeout-minutes: 10
     
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository  
+      uses: actions/checkout@v2
+
+    - name: List files in Projects/Apps/ViaCepApp
+      run: ls -al Projects/Apps/ViaCepApp
+
+    - name: List available schemes
+      run: xcodebuild -list -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj
 
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_16.0.app
 
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
-      
+
     - name: Build and Test MacOS CI
       run: xcodebuild clean build test -project Projects/Apps/ViaCepApp/ViaCep.xcodeproj -scheme "ViaCep" -testPlan "ViaCep" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
    
