--- a/ViaCep.xcodeproj/xcshareddata/xcschemes/ViaCep.xcscheme
+++ b/ViaCep.xcodeproj/xcshareddata/xcschemes/ViaCep.xcscheme
@@ -70,7 +70,9 @@
       debugServiceExtension = "internal"
       showGraphicsOverview = "Yes"
       logGraphicsOverview = "Yes"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      consoleMode = "0"
+      structuredConsoleMode = "1">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
@@ -98,6 +100,10 @@
             isEnabled = "YES">
          </AdditionalOption>
       </AdditionalOptions>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
